--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,21 @@
+
+management.security.enabled= true
+
+
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url = jdbc:mysql://localhost:3306/users_database?useSSL=false
+spring.datasource.url = jdbc:mysql://localhost:3306/users_database?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username = root
 spring.datasource.password = root
 
+
+## Hibernate Properties
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = update
+useSSL=false&allowPublicKeyRetrieval=true
+
+spring.mvc.view.prefix: /WEB-INF/jsp
+spring.mvc.view.suffix: .jsp
 
